# mongoose-os-template

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  mos.yml
include/: Module.h
src/: CMakeLists.txt  Module.cpp  main.cpp  utils.c
test/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  tests.cpp
tools/: .gdbinit  .gdbinit-command-line  copy_gdbinit.bat  debug_start_gdb.bat  debug_start_openocd.bat  extensions.cmake  flash.ps1  flash_jtag.bat  jtagFlash.ps1  reset_jtag.bat  selectPort.ps1  start_openocd.bat
